@@ -7,6 +7,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+import ru.kata.spring.boot_security.demo.dao.RoleDao;
 import ru.kata.spring.boot_security.demo.model.Role;
 import ru.kata.spring.boot_security.demo.model.User;
 import ru.kata.spring.boot_security.demo.service.UserService;
@@ -14,11 +15,14 @@ import ru.kata.spring.boot_security.demo.service.UserService;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Controller
 public class UserController {
     private final UserService userService;
+    @Autowired
+    private RoleDao roleDao;
 
     @Autowired
     public UserController(UserService userService) {
@@ -29,7 +33,7 @@ public class UserController {
     public String findAll(Model model) {
         SecurityContext securityContext = SecurityContextHolder.getContext();
         var w=userService.findAll()
-                .stream().filter(user1->user1.getEmail().equals(securityContext.getAuthentication().getName()))
+                .stream().filter(user1->user1.getUsername().equals(securityContext.getAuthentication().getName()))
                 .collect(Collectors.toList()).stream().findFirst().orElse(null);
         List<User> users = userService.findAll();
         model.addAttribute("users", users);  //передать в юз html юз
@@ -41,13 +45,15 @@ public class UserController {
 
     
     @GetMapping("/user-create")
-    public String createUserForm(User user) {
+    public String createUserForm(User user,Role role,Model model) {
+        model.addAttribute("roles",roleDao.findAll());
         return "userCreate";
     }
 
     @PostMapping("/user-create")
-    public String userCreate(User user) {
-        user.setRoles(Collections.singleton(new Role(1l, "ROLE_USER")));
+    public String userCreate(User user,Role role) {
+        role=roleDao.findById(role.getId()).get();
+        user.setRoles(Set.of(role));
         userService.saveUser(user);
         return "redirect:/adminn";
     }
@@ -59,14 +65,17 @@ public class UserController {
     }
 
     @GetMapping("user-update/{id}")
-    public String updateUserForm(@PathVariable("id") Long id, Model model) {
+    public String updateUserForm(@PathVariable("id") Long id,Role role, Model model) {
         User user = userService.findById(id);
+        model.addAttribute("roles",roleDao.findAll());
         model.addAttribute("user", user);
         return "userUpdate";
     }
 
     @PostMapping("/user-update")
-    public String userUpdate(User user) {
+    public String userUpdate(User user,Role role) {
+        role=roleDao.findById(role.getId()).get();
+        user.setRoles(Set.of(role));
         userService.saveUser(user);
         return "redirect:/adminn";
     }
